boreal/tests/assets/invalid_files/compilation/duplicated_rule_name.yar
rule a {
    condition: true
}
rule a {
    condition: true
}
